syntax = "proto3";

option java_package = "dev.codeswamp.grpc";
option java_multiple_files = true;

service FolderService{
  rpc CreateRootFolder(CreateRootFolderRequest) returns (CreateRootFolderResponse);
}

message CreateRootFolderRequest{
  int64 userId = 1;
  string username = 2;
}

message CreateRootFolderResponse {
  bool success = 1;
}